fix: improve vertical spacing

--- a/assets/scss/ninfa/_base.scss
+++ b/assets/scss/ninfa/_base.scss
@@ -23,6 +23,18 @@ h1, h2, h3, h4 {
     line-height: var(--line-height-tight);
 }
 
+h1 {
+    letter-spacing: var(--letter-spacing-tighter);
+}
+
+h2 {
+    letter-spacing: var(--letter-spacing-tight);
+}
+
+h3, h4 {
+    letter-spacing: var(--letter-spacing-normal);
+}
+
 .sidebar {
     grid-column: 1/4;
     grid-row: 1;
